# DLK

SFMLapp/: CMakeLists.txt
SFMLapp/Resources/: README.md  README.txt
SFMLapp/data/admin/: accounts_admin.txt
SFMLapp/data/doctor/: accounts_doctor_0.txt
SFMLapp/data/patient/: accounts_patient_0.txt
SFMLapp/include/: Account.h  Admin.h  Appointment.h  Doctor.cpp  Doctor.h  Guest.h  Patient.h  Search.h  Specialization.h  User.h  genID.h
SFMLapp/src/: Account.cpp  Admin.cpp  Datastore.cpp  Doctor.cpp  Guest.cpp  Patient.cpp  Specialization.cpp  UIHelpers.cpp  User.cpp  genID.cpp  main.cpp
